navbar fixed position and adjusted margins on hero. also added z-index to keep nav at forefront

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@ html {
   background-color: #141414;
 }
 
+/* ! Navbar */
+.navbarFade {
+  position: fixed;
+  top: 0;
+
+}
+
 /*! Hero */
 /* Heading underline */
 .heroUnderline {
